--- a/arway.css
+++ b/arway.css
@@ -83,6 +83,7 @@
     color: white;
     font-size: 20px;
     margin-top: 10px;
+    text-align: center;
 }
 
 .gradient-text {
@@ -121,7 +122,7 @@
 
 .gradient-text-2 {
     margin-top: 100px;
-    font-size: 20px;
+    font-size: 16px;
     text-align: center;
     background: linear-gradient(to bottom, rgb(255, 209, 1), rgb(253, 2, 93));
     background-clip: text;
@@ -131,43 +132,92 @@
 .h3 {
     color: white;
     font-weight: bold;
-    font-size: 50px;
+    font-size: 40px;
     text-align: center;
     margin-top: 20px;
 }
 
 .box1{
-    margin-top:60px;
+    margin-top:50px;
     border: 2px solid #369eff;
     border-radius: 10px;
-    width: 360px;
-    height:600px;
+    width: 320px;
+    height:480px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.box3{
+    margin-top:50px;
+    border: 2px solid yellow;
+    border-radius: 10px;
+    width: 320px;
+    height:480px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.h5 {
+    color: white;
+    font-size: 18px;
+    margin-top: 10px;
+    text-align: center;
+}
+
 .h4{
-    margin-top: 20px;
+    margin-top: 10px;
     color: #369eff;
-    font-size:35px;
+    font-size:30px;
     font-weight: bold;
+    text-align: center;
+}
+
+.h7{
+    margin-top: 10px;
+    color: yellow;
+    font-size:30px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.h6{
+    margin-top: 10px;
+    color: #e80055;
+    font-size:30px;
+    font-weight: bold;
+    text-align: center;
 }
 
 .img1{
     margin-top: 20px;
-    height:250px;
+    height:170px;
+}
+
+.img3{
+    margin-top: 20px;
+    height:150px;
+}
+
+.img4{
+    margin-top:10px;
+    height: 126px;
+}
+
+.img5{
+    height: 135px;
 }
 
 .button1{
     margin-top: 20px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight:bold;
     border: 3px solid #369eff;
     background-color: #021345;
     border-radius:5px;
-    height:35px;
-    width: 230px;
+    height:33px;
+    width: 225px;
     padding-top: 10px;
     text-align: center;
     color: white;
@@ -182,25 +232,26 @@
     flex-direction: column;
     align-items: center;
     background-color: #152f4d;
-    width: 360px;
+    width: 320px;
     height: 200px;
 }
 
 .tick-flex{
     margin-top:20px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     color: white;
-    gap: 10px;
+    gap: 5px;
     background-color: #152f4d;
 }
 
 .tick-flex>div{
     background-color: #152f4d;
+    font-size:small;
 }
 
 .img2{
-    height:18px;
+    height:15px;
     background-color: #152f4d;
 }
 
@@ -213,63 +264,262 @@
 }
 
 .button2{
-    font-size: medium;
+    font-size: small;
     color: black;
     background-color: white;
     border: 1px solid white;
     border-radius: 5px;
     height:20px;
-    width:63px;
+    width:60px;
     text-align:center;
     padding-top:3px;
 }
 
 .button3{
-    font-size: medium;
+    font-size: small;
     color: white;
     background-color: #2b4ec2;
     border: 1px solid #2b4ec2;
     border-radius: 5px;
     height:20px;
-    width:63px;
+    width:60px;
     text-align:center;
     padding-top:3px;
 }
 
 .button4{
-    font-size: medium;
+    font-size: small;
     color: white;
     background-color: #369eff;
     border: 1px solid #369eff;
     border-radius: 5px;
     height:20px;
-    width:63px;
+    width:60px;
     text-align:center;
     padding-top:3px;
 }
 
 .button5{
-    font-size: medium;
+    font-size: small;
     color: black;
     background-color: white;
     border: 1px solid white;
     border-radius: 5px;
     height:20px;
-    width:63px;
+    width:60px;
     text-align:center;
     padding-top:3px;
 }
 
 .learn_more{
-    margin-top: -15px;
+    margin-top: -35px;
     background-color: #369eff;
     color: white;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: bold;
     text-align: center;
     padding-top: 15px;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
-    width: 360px;
-    height: 35px;
+    width: 320px;
+    height: 32px;
+}
+
+.learn_more_1{
+    margin-top: -35px;
+    background-color: #e80055;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 15px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    width: 320px;
+    height: 32px;
+}
+
+.learn_more_2{
+    margin-top: -35px;
+    background-color: yellow;
+    color: black;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 15px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    width: 320px;
+    height: 32px;
+}
+
+.boxes{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.box2{
+    margin-top:50px;
+    border: 2px solid #e80055;
+    border-radius: 10px;
+    width: 320px;
+    height:480px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button6{
+    font-size: small;
+    color: white;
+    background-color: #e80055;
+    border: 1px solid #e80055;
+    border-radius: 5px;
+    height:20px;
+    width:60px;
+    text-align:center;
+    padding-top:3px;
+}
+
+.button7{
+    font-size: small;
+    color: black;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+    height:20px;
+    width:60px;
+    text-align:center;
+    padding-top:3px;
+}
+
+.button8{
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight:bold;
+    border: 3px solid #e80055;
+    background-color: #021345;
+    border-radius:5px;
+    height:33px;
+    width: 225px;
+    padding-top: 10px;
+    text-align: center;
+    color: white;
+}
+
+.button8>div{
+    background-color: #152f4d;
+}
+
+.button9{
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight:bold;
+    border: 3px solid yellow;
+    background-color: #021345;
+    border-radius:5px;
+    height:33px;
+    width: 225px;
+    padding-top: 10px;
+    text-align: center;
+    color: white;
+}
+
+.button9>div{
+    background-color: #152f4d;
+}
+
+.button10{
+    font-size: small;
+    color: black;
+    background-color: yellow;
+    border: 1px solid yellow;
+    border-radius: 5px;
+    height:20px;
+    width:60px;
+    text-align:center;
+    padding-top:3px;
+}
+
+.button11{
+    font-size: small;
+    color: black;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+    height:20px;
+    width:60px;
+    text-align:center;
+    padding-top:3px;
+}
+
+.gradient-text-3 {
+    margin-top: 100px;
+    font-size: 16px;
+    margin-left: 100px;
+    background: linear-gradient(to bottom, rgb(255, 209, 1), rgb(253, 2, 93));
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.h8{
+    margin-left: 100px;
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+}
+
+.img7{
+    height:280px;
+    margin-bottom: 20px;
+    margin-top: -2px;
+}
+
+.h9{
+    color: white;
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    margin-left: 25px;
+}
+
+.l1{
+    margin-left: 20px;
+    margin-top:5px;
+    color: white;
+    display: flex;
+    align-items: center;
+}
+
+.img6{
+    height: 25px;
+}
+
+.BOX1{
+    border: 2px solid #2b4ec2;
+    height:610px;
+    width: 404px;
+    border-radius:20px;
+}
+
+.box4{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top:50px;
+}
+
+.button12{
+    background-color: white;
+    color: blue;
+    font-size:15px;
+    border: 2px solid white;
+    border-radius: 10px;
+    height:30px;
+    width: 130px;
+    text-align: center;
+    padding-top: 10px;
+    margin-top: 50px;
+    margin-left: 700px;
 }
